# sbgc32-serial-api

./: .gitignore  README.md  changelog.txt
doxygen/: doxyfile  overview.dox
drivers/ArduinoDriver/: driver_Arduino.cpp  driver_Arduino.h
drivers/LinuxDriver/: driver_Linux.c  driver_Linux.h
drivers/STM32_Driver/: MCU_Config.h  driver_STM32.c  driver_STM32.h  stm32_it.c  stm32_it.h
examples/Arduino/DemoLaunch/: README.md  platformio.ini
examples/Arduino/DemoLaunch/include/: serialAPI_Config.h
examples/Arduino/DemoLaunch/src/: main.cpp
examples/Arduino/LCD_Remote/: README.md  platformio.ini
examples/Arduino/LCD_Remote/include/: LiquidCrystal.h  MemoryFree.h  app.h  serialAPI_Config.h
examples/Arduino/LCD_Remote/src/: LiquidCrystal.cpp  MemoryFree.cpp  app.cpp  main.cpp
examples/Arduino/MimicControl/: README.md  platformio.ini
examples/Arduino/MimicControl/include/: app.h  serialAPI_Config.h
examples/Arduino/MimicControl/lib/: README
examples/Arduino/MimicControl/src/: app.cpp  main.cpp
examples/Arduino/MimicControl/test/: README
examples/Arduino/QuickStart/: README.md  platformio.ini
examples/Arduino/QuickStart/include/: serialAPI_Config.h
examples/Arduino/QuickStart/src/: main.cpp
examples/ESPIDF/DemoLaunch/: .cproject  .project  README.md  sdkconfig
examples/ESPIDF/DemoLaunch/main/: CMakeLists.txt  main.c
examples/ESPIDF/QuickStart/: .cproject  .project  README.md
examples/ESPIDF/QuickStart/components/serialAPI/: CMakeLists.txt
examples/ESPIDF/QuickStart/components/serialAPI/include/: serialAPI_Config.h
examples/ESPIDF/QuickStart/main/: main.c
examples/Linux/DemoLaunch/: CMakeLists.txt  README.md  main.c  serialAPI_Config.h
examples/Linux/QuickStart/: CMakeLists.txt  README.md  main.c  serialAPI_Config.h
examples/STM32/DemoLaunch/: .cproject  .mxproject  .project  README.md  SBGC32_DemoLaunch.ioc  STM32F767ZITX_FLASH.ld
examples/STM32/DemoLaunch/Core/Inc/: main.h  serialAPI_Config.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  usart.h
examples/STM32/DemoLaunch/Core/Src/: gpio.c  main.c  stm32f7xx_it.c  tim.c  usart.c
examples/STM32/DemoLaunch/Debug/: SBGC32_DemoLaunch.list  makefile  objects.list  objects.mk  sources.mk
examples/STM32/DemoLaunch/Debug/STM32_Driver/: subdir.mk
examples/STM32/DemoLaunch/Debug/serialAPI/: subdir.mk
examples/STM32/LCD_Remote/: .cproject  .mxproject  .project  README.md  SBGC32_LCD_Remote.ioc  STM32F767ZITX_RAM.ld
examples/STM32/LCD_Remote/Core/Inc/: LiquidCrystal.h  app.h  i2c.h  main.h  serialAPI_Config.h  stm32f7xx_hal_conf.h  (+1 more)
examples/STM32/LCD_Remote/Debug/: SBGC32_LCD_Remote.list  makefile  objects.list  objects.mk  sources.mk
examples/STM32/MimicControl/: .cproject  .mxproject  .project  README.md  SBGC32_MimicControl.ioc  STM32F767ZITX_FLASH.ld  STM32F767ZITX_RAM.ld
examples/STM32/MimicControl/Debug/: SBGC32_MimicControl.list  makefile  objects.list  sources.mk
examples/STM32/MiniRemote/: .cproject  .mxproject  .project  MiniRemote Debug.cfg  MiniRemote.ioc  README.md  STM32F411CEUX_FLASH.ld
examples/STM32/MiniRemote/Debug/: makefile  objects.list  sources.mk
examples/STM32/MiniRemote/HighLayer/: main.cpp  projectConfig.h
examples/STM32/MiniRemote/LowLayer/: initialConfig.h  serialAPI_Config.h
examples/STM32/QuickStart/: .cproject  .mxproject  .project  README.md  SBGC32_QuickStart.ioc  STM32F767ZITX_FLASH.ld  STM32F767ZITX_RAM.ld
examples/STM32/QuickStart/Debug/: SBGC32_QuickStart.list  makefile  objects.list  sources.mk
serialAPI/: adjunct.h  sbgc32.c  sbgc32.h  serialAPI_ConfigTemplate.h  serialAPI_MakeCpp.cpp
serialAPI/core/: commandBuild.c  core.h  lowLayer.c
serialAPI/core/debug/: debug.c  debug.h
serialAPI/core/highLayer/: highLayer.c  highLayer.h
serialAPI/core/parser/: parser.c  parser.h
serialAPI/drivers/ArduinoDriver/: driver_Arduino.cpp  driver_Arduino.h
serialAPI/drivers/LinuxDriver/: driver_Linux.c  driver_Linux.h
serialAPI/drivers/STM32_Driver/: driver_STM32.c  driver_STM32.h
serialAPI/drivers/driverArduino/: driverArduino.cpp  driverArduino.h
serialAPI/drivers/driverESP32/: driverESP32.c  driverESP32.h
serialAPI/drivers/driverLinux/: driverLinux.c  driverLinux.h
serialAPI/drivers/driverSTM32/: driverSTM32.c  driverSTM32.h  driverSTM32_ConfigTemplate.h
serialAPI/modules/adjvar/: adjvar.c  adjvar.h
serialAPI/modules/calib/: calib.c  calib.h
serialAPI/modules/eeprom/: eeprom.c  eeprom.h
serialAPI/modules/gimbalControl/: gimbalControl.c  gimbalControl.h
serialAPI/modules/imu/: imu.c  imu.h
serialAPI/modules/profiles/: profiles.c  profiles.h
serialAPI/modules/realtime/: realtime.c  realtime.h
serialAPI/modules/service/: service.c  service.h
serialAPI/os/glueAzureRTOS/: glueAzureRTOS.c  glueAzureRTOS.h
serialAPI/os/glueFreeRTOS/: glueFreeRTOS.c  glueFreeRTOS.h
serialAPI/os/glueLinuxOS/: glueLinuxOS.c  glueLinuxOS.h
serialAPI/os/gluePThread/: gluePThread.c  gluePThread.h
serialAPI/sources/adjvar/: adjvar.c  adjvar.h
serialAPI/sources/calib/: calib.c  calib.h
serialAPI/sources/core/: core.c  core.h
serialAPI/sources/eeprom/: eeprom.c  eeprom.h
serialAPI/sources/gimbalControl/: gimbalControl.c  gimbalControl.h
serialAPI/sources/imu/: imu.c  imu.h
serialAPI/sources/profiles/: profiles.c  profiles.h
serialAPI/sources/realtime/: realtime.c  realtime.h
serialAPI/sources/service/: service.c  service.h
sources/adjvar/: adjvar.c  adjvar.h
sources/calib/: calib.c  calib.h
sources/core/: adjunct.h  core.c  core.h
sources/eeprom/: eeprom.c  eeprom.h
sources/gimbalControl/: gimbalControl.c  gimbalControl.h
sources/imu/: imu.c  imu.h
sources/profiles/: profiles.c  profiles.h
sources/realtime/: realtime.c  realtime.h
sources/service/: service.c  service.h
(+605 files in other folders)
